--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "bootstrap": "^5.3.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
