--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
+    "buffer": "^6.0.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
